White background on transparent iframes
Categories
(Core :: Graphics, defect)
Tracking
()
Tracking | Status | |
---|---|---|
firefox-esr91 | --- | unaffected |
firefox-esr102 | --- | unaffected |
firefox104 | --- | unaffected |
firefox105 | --- | unaffected |
firefox106 | + | verified |
People
(Reporter: hf.nguyen7, Assigned: emilio)
References
(Blocks 1 open bug, Regression)
Details
(Keywords: regression)
Attachments
(3 files)
Steps to reproduce:
Open a twitch stream which has twitch extensions enabled.
I've bisected to this commit with no addons or additional settings: https://phabricator.services.mozilla.com/D154931
Actual results:
Iframe that should have a transparent background instead has a white background. Video player consists of a white screen.
Expected results:
The iframe should have a transparent background. The stream should be visible.
Comment 1•3 years ago
|
||
The Bugbug bot thinks this bug should belong to the 'Core::Graphics' component, and is moving the bug to that component. Please correct in case you think the bot is wrong.
![]() |
||
Updated•3 years ago
|
Comment 2•3 years ago
|
||
Set release status flags based on info from the regressing bug 1782596
:emilio, since you are the author of the regressor, bug 1782596, could you take a look?
For more information, please visit auto_nag documentation.
Comment 3•3 years ago
|
||
The bug has a release status flag that shows some version of Firefox is affected, thus it will be considered confirmed.
Assignee | ||
Comment 4•3 years ago
|
||
[Tracking Requested - why for this release]: Seems to make twitch unusable in some cases.
Do you have a channel that reproduces this? I don't see this on any of the channels I found (either channels I've seen or in the "recommended channels" section).
I use the nightly channel.
Assignee | ||
Comment 6•3 years ago
|
||
Sorry, I meant twitch channel, I also use nightly :)
https://www.twitch.tv/ayinmaiden doesn't seem to be streaming, and I don't see channel with this issue locally... Can you attach about:support? Also do you have dark mode enabled but light mode on twitch? Just light mode everywhere?
Happening on this stream: https://www.twitch.tv/gorgc
Dark mode enabled in Windows. Dark theme selected in Firefox. I've just tried both dark and light theme in twitch and it doesn't matter: both have the same issue.
Updated•3 years ago
|
![]() |
||
Comment 9•3 years ago
•
|
||
Reported in http://forums.mozillazine.org/viewtopic.php?p=14937575#p14937575
You should turn on Windows10 OS dark mode with Firefox's default system theme.
The NSFW web site(https://stripchat.com/) seems to be affected this bug.
Assignee | ||
Updated•3 years ago
|
Comment 10•3 years ago
|
||
as Alice said above, i get this issue on Firefox nightly , im using Windows11 Dark Theme
Comment 11•3 years ago
|
||
(In reply to Greg ( Hank1 ) from comment #10)
as Alice said above, i get this issue on Firefox nightly , im using Windows11 Dark Theme
im just wondering if its more or less a Firefox Dark Theme issue rather than a OS Dark theme that causes the issue, i just changed it back to Light Theme in firefox (i didnt change the OS Theme ) an it worked fine
Assignee | ||
Comment 12•3 years ago
|
||
As per spec, see https://drafts.csswg.org/css-color-adjust/#color-scheme-effect:
In order to preserve expected color contrasts, in the case of embedded
documents typically rendered over a transparent canvas (such as
provided via an HTML iframe element), if the used color scheme of the
element and the used color scheme of the embedded document’s root
element do not match, then the UA must use an opaque canvas of the
Canvas color appropriate to the embedded document’s used color scheme
instead of a transparent canvas.
After bug 1782596 we were using the preferred rather than used
color-scheme, which is the right thing to do for prefers-color-scheme,
but not for the canvas background.
Updated•3 years ago
|
Assignee | ||
Updated•3 years ago
|
![]() |
||
Comment 16•3 years ago
|
||
Patch is working on latest beta sim https://treeherder.mozilla.org/jobs?repo=try&resultStatus=testfailed%2Cbusted%2Cexception&revision=32a537c049fd1feeeb44d20ff8109b5dce6dcd94
Comment 19•3 years ago
|
||
#1788911 marked as duplicated for this bug entry ,i just wantted to pointout one comment from there to here
(for not to be missed ) from @ Calin Tanase
Performed mozregression
Last good revision: 7c1e795e3c0750d5dcd99dab73be28e871c38979
First bad revision: 495ffb27c683fe2219b559708d3eb415847faa10
Pushlog: https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=7c1e795e3c0750d5dcd99dab73be28e871c38979&tochange=495ffb27c683fe2219b559708d3eb415847faa10
Comment 20•3 years ago
|
||
![]() |
||
Comment 23•3 years ago
|
||
bugherder |
Comment 24•3 years ago
|
||
Verified fixed for both beta sim bugs (bug 1786527 and bug 1786851), in todays beta-sim
Description
•